# common - removed camera permission and scan qr icon - fixing implicit intent google play problem - fixed ActivityNotFoundException problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,5 +237,6 @@
     <string name="total_time_spent">Tiempo total dedicado:</string>
     <string name="tiempo">Tiempo</string>
     <string name="duration">Duración</string>
+    <string name="no_app_available">No hay una aplicación disponible para manejar esta operación</string>
 
 </resources>
